# tableau-solver-haskell

./: .gitignore  .travis.yml  README.md  main.hs  stack.yaml  tableau-solver.cabal  tablueau.cabal
app/: Main.hs
bench/: BenchMain.hs
src/: ExampleProblems.hs  TableauSolver.hs
test/: TableauSolverSpec.hs
