name:                tableau-solver
version:             0.1.0.0
synopsis:            Tableau solver in Haskell
-- description:
homepage:            https://github.com/nwtgck/tableau-solver-haskell
license:             BSD3
license-file:        LICENSE
author:              Ryo Ota
maintainer:          nwtgck@gmail.com
copyright:           2017 Ryo Ota
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TableauSolver
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable tableau-solver-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tableau-solver
                     , containers
  default-language:    Haskell2010

test-suite tableau-solver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tableau-solver
                     , hspec
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nwtgck/tableau-solver-haskell
